; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/net/extr_net_socket_ssl.c_ssl_socket_close.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/net/extr_net_socket_ssl.c_ssl_socket_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ssl_state = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ssl_socket_close(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.ssl_state*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.ssl_state*
  store %struct.ssl_state* %5, %struct.ssl_state** %3, align 8
  %6 = load %struct.ssl_state*, %struct.ssl_state** %3, align 8
  %7 = getelementptr inbounds %struct.ssl_state, %struct.ssl_state* %6, i32 0, i32 1
  %8 = call i32 @mbedtls_ssl_close_notify(i32* %7)
  %9 = load %struct.ssl_state*, %struct.ssl_state** %3, align 8
  %10 = getelementptr inbounds %struct.ssl_state, %struct.ssl_state* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @socket_close(i32 %12)
  ret void
}

declare dso_local i32 @mbedtls_ssl_close_notify(i32*) #1

declare dso_local i32 @socket_close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
